--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "submenu.h": "c",
+        "main_menu.h": "c",
+        "ctype.h": "c"
     }
 }
